--- a/css/site.css
+++ b/css/site.css
@@ -1,8 +1,18 @@
 hr{
     clear:both;
 }
+#wrapper .table .selected{
+    background: #B9D9FE;
+}
+.picker-group{
+    margin-bottom: -30px;
+}
 h2{
     clear:both;
+}
+.button-bar{
+    margin-bottom:10px;
+    margin-top:10px;
 }
 .picker-group i {
     position: absolute;
