--- a/css/site.css
+++ b/css/site.css
@@ -1,19 +1,48 @@
-hr{
-    clear:both;
+hr {
+    clear: both;
 }
-#wrapper .table .selected{
+
+.clear-float {
+    clear: both;
+    width: 0px;
+    height: 0px;
+}
+
+.buttom-bar-bottom > .btn {
+    float: right;
+    margin-left: 10px;
+}
+
+.buttom-bar-bottom {
+    padding-bottom: 55px
+}
+
+#wrapper .table .selected {
     background: #B9D9FE;
 }
-.picker-group{
-    margin-bottom: -30px;
+
+.picker-group {
+    margin-bottom: 0px;
 }
-h2{
-    clear:both;
+
+.editor {
+    min-height: 200px;
+    width: 100%;
 }
-.button-bar{
-    margin-bottom:10px;
-    margin-top:10px;
+
+.tab-content {
+    margin-top: 15px;
 }
+
+h2 {
+    clear: both;
+}
+
+.button-bar {
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
 .picker-group i {
     position: absolute;
     bottom: 10px;
